# Diabetes-Predictor

./: .gitignore  README.md  WORKING_CODE_EXAMPLES.md  complete_example.py  pyproject.toml  requirements.txt  setup.py
app/: cli.py  web_app.py
app/templates/: index.html
configs/: app_config.yaml  data_config.yaml  model_config.yaml
data/: README.md
docs/: ai_prompt_journal.md  toolkit.md
examples/: run_prediction.py
notebooks/: complete_example.ipynb
scripts/: check_env.ps1
src/: __init__.py  data_loader.py  evaluate_model.py  predict.py  train_model.py
tests/: test_data_loader.py  test_predict.py  test_train_model.py
